--- a/SolderPackager/SolderPackager.csproj
+++ b/SolderPackager/SolderPackager.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <RuntimeIdentifiers>win10-x64;osx.10.10-x64
@@ -6,4 +6,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.0</TargetFramework>
     </PropertyGroup>
+    <ItemGroup>
+      <Compile Remove="ProgressBar.cs" />
+    </ItemGroup>
 </Project>
